# Plotting-lib-pyglotaran

./: README.md  future_updates.md  pyproject.toml
Functions/: Decomposition_plot.py  format_publication_plot_no_latex.py  plot_difference_map.py  plot_heatmap.py  plot_multi_spectral_slices.py  plot_multi_spectral_traces.py  plot_multi_time_traces.py  plot_species_associated_spectra.py  plot_time_traces.py
Megacomplexes/: delayed_damped_oscillation_megacomplex.py  registration_example.ipynb
src/pyglotaran_plotting/: __init__.py
src/pyglotaran_plotting/chirp_correction/: auto_estimate_chirp.py  auto_estimate_chirp_fft_denoising  debug.ipynb  estimate_chirp.py  example.ipynb
src/pyglotaran_plotting/dataIO/: ShoveDataIO.py  ShoveDataIO_scan.py  StreakCameraDataIO.py
src/pyglotaran_plotting/functions/: Decomposition_plot.py  format_publication_plot_no_latex.py  get_lifetimes_table.py  plot_difference_map.py  plot_heatmap.py  plot_multi_spectral_slices.py  plot_multi_spectral_slices_animation.py  plot_multi_time_traces.py  plot_species_associated_spectra.py  plot_time_traces.py
src/pyglotaran_plotting/megacomplexes/: __init__.py
